<resources>
    <string name="app_name">MindSpace</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="enter_email">masukan email</string>
    <string name="enter_password">Masukan Password</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="change">Change</string>
    <string name="sharing_session_status">Bagaimana Perasaanmu Hari ini?</string>
    <string name="send">Send</string>
    <string name="welcome_to">Welcome to</string>
    <string name="hi">Hi,</string>
    <string name="register">Register</string>
    <string name="continue_login">COntinue Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sapaan">Hi, semoga harimu baik</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sapaan_nice">Have a nice day !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="stories">Setiap orang punya cerita</string>
    <string name="date_example">22/22/2023 20:20:20</string>
    <string name="result">Result :</string>
    <string name="bagaimana_perasaanmu_hari_ini">Bagaimana Perasaanmu Hari ini?</string>
</resources>