<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.useraccount.editprofileuser.EditProfileUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarsharingssession"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/topsheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/informationaccount"
            android:layout_width="165dp"
            android:layout_height="114dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/big_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/informationaccount"
            app:layout_constraintVertical_bias="0.13999999" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emoticon"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/barstatus"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarsharingssession">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/emoticon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/Name" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/bottonbackgroundwhite"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textName"
            app:layout_constraintBottom_toTopOf="@+id/textName"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/Name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/bottonbackgroundwhite"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:paddingStart="10dp"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmail"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            tools:alpha="100">

            <com.dicoding.mindspace.view.customview.EditTextPassword
                android:id="@+id/passwordEditText"
                android:hint="@string/enter_password"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnC"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottonbackground"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emoticon"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>