<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.emoticon.detail.DetailStoryActivity">

    <ImageView
        android:id="@+id/iv_stories"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/topsheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stories"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_stories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_at_2"
        android:layout_width="238dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:text="@string/date_example"
        android:textSize="12sp"
        android:translationY="-1.89sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_curhatan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_stories"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_curhatan"
        android:layout_width="337dp"
        android:layout_height="449dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="3sp"
        android:text="@string/stories"
        android:textSize="18sp"
        android:translationY="-1.3sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_stories" />

    <TextView
        android:id="@+id/tv_result_emot"
        android:layout_width="66dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:text="@string/result"
        android:textSize="15sp"
        android:textStyle="bold"
        android:translationY="-1.89sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_curhatan"
        app:layout_constraintVertical_bias="0.341" />

    <ImageView
        android:id="@+id/emot_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/happy_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_result_emot"
        app:layout_constraintTop_toBottomOf="@+id/tv_curhatan" />

</androidx.constraintlayout.widget.ConstraintLayout>