<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.useraccount.profileuser.UserProfileActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:indeterminate="true"
        style="@style/Base.Theme.MindSpace.BlueAccent"
        android:indeterminateTint="@color/lightblue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBarsharingssession"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/topsheet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/informationaccount"
                android:layout_width="165dp"
                android:layout_height="114dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/big_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/informationaccount"
                app:layout_constraintVertical_bias="0.13999999" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/emoticon"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@drawable/barstatus"
        android:elevation="2dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarsharingssession">

        <TextView
            android:id="@+id/Textprofil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/informasi_akun"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/name_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/email_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:layout_marginBottom="30dp"
            app:backgroundTint="@color/red"
            app:cornerRadius="10dp"
            android:text="Logout"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emoticon"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>